# task-tree

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  tasktree-implementation-summary.md  tasktree.yaml  test_manual.py
.claude/: settings.local.json
.github/workflows/: validate-pipx-install.yml
example/: tasktree.yaml
requirements/: 01-basic-variables.md
schema/: README.md  tasktree-schema.json
src/tasktree/: cli.py  docker.py  executor.py  graph.py  hasher.py  parser.py  state.py  substitution.py  tasks.py  types.py
tests/e2e/: test_docker_basic.py  test_docker_environment.py  test_docker_ownership.py  test_docker_volumes.py  test_non_docker.py
tests/integration/: test_builtin_variables.py  test_clean_state.py  test_cli_options.py  test_dependency_execution.py  test_dependency_triggering_fix.py  test_end_to_end.py  test_exported_args.py  test_git_variables.py  test_nested_imports.py  test_parameterized_dependencies.yaml  test_parameterized_deps_execution.py  test_self_references.py  test_state_persistence.py  test_variables.py  test_working_directory.py
tests/unit/: test_cli.py  test_dependency_parsing.py  test_docker.py  test_environment_tracking.py  test_executor.py  test_list_formatting.py  test_parameterized_graph.py  test_parser.py  test_substitution.py  test_tasks.py
